adding biz rule of semesters and institutions. formating dates in list templates. improving relation mappings and merge update.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/athena
 spring.datasource.username=postgres
 spring.datasource.password=ifpb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mvc.hiddenmethod.filter.enabled=true
