wip: setup spring security and db migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.password=ifpb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+#Flyway properties
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/athena
+spring.flyway.password= ifpb
+spring.flyway.user= postgres
+spring.flyway.schemas=public
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baselineOnMigrate=true
