--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 			<groupId> nz.net.ultraq.thymeleaf </groupId>
 			<artifactId> thymeleaf-layout-dialect </artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
