--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.flyway.user= postgres
 spring.flyway.schemas=public
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate=true
+
+# Upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-swallow-size=-1
