wip: deleting old document on update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Nome da aplicação
+# Nome da aplicaï¿½ï¿½o
 server.servlet.context-path=/athena
 
-# Configurações de conexão ao SGBD
+# Configuraï¿½ï¿½es de conexï¿½o ao SGBD
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
